Forget to commit because you can't stop messing with cool DOM manipulation and you're having too much fun that you could've finished this project like at least 10 hours ago

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 .header{
     display: flex;
     justify-content: center;
-    padding: 32px;
+    align-items: center;
+    font-size: 32px;
 }
 
 body, html{
@@ -12,23 +13,52 @@ body {
     background-color: #ddd;
     display: flex;
     flex-direction: column;
+    align-items: center;
     padding: 0px;
     margin: 0px;
 }
 
-#UI {
+.UI {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
+    gap: 100px;
+    max-width: 1100px;
+    margin: 0 auto;
 }
 
 #container {
     display: grid;
+    width: 500px;
+    height: 500px;
+    justify-self: center;
+    align-self: center;
 }
 
 .grid-item {
-    padding: 1em;
     background-color: white;
     border: 1px solid #ddd;
-    text-align: center;
+    user-select: none;
+}
+
+.controls {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 150px;
+    gap: 20px;
+}
+
+.color-selector {
+    width: 80px;
+    height: 80px;
+}
+
+.controls button{
+    background-color: transparent;
+    padding: 10px;
+    border-radius: 5px;
+    width: 100%;
+    cursor: pointer;
+    font-size: inherit;
 }
